# unify

./: .gitconfig  .gitignore  01test01-General_8cpp.html  01test01-_general_8cpp.html  01test02-Strings_8cpp.html  01test02-_strings_8cpp.html  01test03-TimeDelta_8cpp.html  01test04-Any_8cpp.html  01test04-_any_8cpp.html  01test05-Path_8cpp.html  01test05-_path_8cpp.html  01test06-Geometry_8cpp.html  01test07-Lookup_8cpp.html  01test08-DataLock_8cpp.html  01test08-_data_lock_8cpp.html  01test09-Parameters_8cpp.html  01test10-Cast_8cpp.html  Angle_8cpp.html  Angle_8h.html  Angle_8h_source.html  Angle_8inl.html  Angle_8inl_source.html  Any_8h.html  Any_8h_source.html  BBox_8h.html  BBox_8h_source.html  BBox_8inl.html  BBox_8inl_source.html  BRectangle_8h.html  BRectangle_8h_source.html  BRectangle_8inl.html  BRectangle_8inl_source.html  BSphere_8h.html  BSphere_8h_source.html  BSphere_8inl.html  BSphere_8inl_source.html  BSquare_8h_source.html  BSquare_8inl_source.html  BadCast_8h.html  BadCast_8h_source.html  (+739 more)
.github/workflows/: main.yml
01tests/01test01-General/: 01test01-General.cpp  01test01-General.vcxproj
01tests/01test02-Strings/: 01test02-Strings.cpp  01test02-Strings.vcxproj  01test02-Strings.vcxproj.filters
01tests/01test03-TimeDelta/: 01test03-TimeDelta.cpp  01test03-TimeDelta.vcxproj  01test03-TimeDelta.vcxproj.filters
01tests/01test04-Any/: 01test04-Any.cpp  01test04-Any.vcxproj
01tests/01test05-Path/: 01test05-Path.cpp  01test05-Path.vcxproj
01tests/01test06-Geometry/: 01test06-Geometry.cpp  01test06-Geometry.vcxproj
01tests/01test07-FastMap/: 01test07-FastMap.cpp  01test07-FastMap.vcxproj  01test07-FastMap.vcxproj.filters
01tests/01test07-Lookup/: 01test07-Lookup.cpp  01test07-Lookup.vcxproj  01test07-Lookup.vcxproj.filters
01tests/01test08-DataLock/: 01test08-DataLock.cpp  01test08-DataLock.vcxproj  01test08-DataLock.vcxproj.filters
01tests/01test09-Parameters/: 01test09-Parameters.cpp  01test09-Parameters.vcxproj  01test09-Parameters.vcxproj.filters
01tests/01test10-Cast/: 01test10-Cast.cpp  01test10-Cast.vcxproj  01test10-Cast.vcxproj.filters
cmakeutil/: Functions.txt
docs/: index.html
docs/html/: 01test03-_time_delta_8cpp.html  01test06-_geometry_8cpp.html  01test07-_lookup_8cpp.html  01test09-_parameters_8cpp.html  01test10-_cast_8cpp.html  _angle_8h.html  _angle_8h_source.html  _any_8h_source.html  _b_box_8h_source.html  _b_rectangle_8h_source.html  _b_rectangle_8inl_source.html  _b_sphere_8h.html  _b_sphere_8h_source.html  _b_sphere_8inl.html  _b_sphere_8inl_source.html  _bad_cast_8h_source.html  _cast_8h.html  _cast_8h_source.html  _cast_8inl.html  _color_unit_8h.html  _data_lock_8cpp.html  _data_lock_8h_source.html  _default_assert_handler_8cpp.html  _default_assert_handler_8h.html  _default_assert_handler_8h_source.html  _default_event_handlers_8h.html  _default_handler_8h.html  _default_handler_8h_source.html  _default_output_handlers_8h.html  _default_output_handlers_8h_source.html  _exception_8h.html  _exception_8h_source.html  _f_stream_8h_source.html  _flags_8h.html  _frame_8cpp.html  _frame_lite_8h.html  _frame_lite_8h_source.html  _frame_set_8cpp.html  _frame_set_8h.html  _frame_set_8h_source.html  (+308 more)
docs/latex/: 01test01-_general_8cpp.tex  01test02-_strings_8cpp.tex  01test03-_time_delta_8cpp.tex  01test04-_any_8cpp.tex  01test05-_path_8cpp.tex  01test06-_geometry_8cpp.tex  01test07-_lookup_8cpp.tex  01test08-_data_lock_8cpp.tex  01test09-_parameters_8cpp.tex  01test10-_cast_8cpp.tex  _angle_8cpp.tex  _angle_8h.tex  _angle_8h_source.tex  _any_8h.tex  _any_8h_source.tex  _b_box_8h.tex  _b_box_8h_source.tex  _b_box_8inl.tex  _b_box_8inl_source.tex  _b_rectangle_8h.tex  _b_rectangle_8h_source.tex  _b_rectangle_8inl.tex  _b_rectangle_8inl_source.tex  _b_sphere_8h.tex  _b_sphere_8h_source.tex  _b_sphere_8inl.tex  _b_sphere_8inl_source.tex  _b_square_8h_source.tex  _b_square_8inl_source.tex  _bad_cast_8h.tex  _bad_cast_8h_source.tex  _cast_8cpp.tex  _cast_8h.tex  _cast_8h_source.tex  _cast_8inl.tex  _color_8cpp.tex  _color_8h.tex  _color_8h_source.tex  _color_unit_8cpp.tex  _color_unit_8h.tex  (+291 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  (+121 more)
tests/Any Test/: Any Test.vcxproj  any_test_main.cpp
tests/File Tests/: File Tests.vcxproj  unify_FileTests.cpp
tests/General Tests/: General Tests.vcxproj  main.cpp
tests/Geometry Tests/: Geometry Tests.vcxproj  Geometry Tests.vcxproj.filters  Unify_GemoetryTests.cpp
tests/Quaternion/: Quaternion.vcxproj  Quaternion.vcxproj.filters  UnifyTest-Quaternion.cpp
tests/UnifyTest-Any/: UnifyTest-Any.cpp  UnifyTest-Any.vcxproj
tests/UnifyTest-General/: unifytest_General.cpp
tests/UnifyTest-Geometry/: UnifyTest-Geometry.vcxproj  unifytest_Gemoetry.cpp
tests/UnifyTest-Matrix/: UnifyTest-Matrix.cpp  UnifyTest-Matrix.vcxproj
tests/UnifyTest-String/: String.vcxproj  unifytest_String.cpp
tests/UnityTest-Path/: unifytest_Path.cpp
tests/UnityTest-TimeDelta/: UnityTest-TimeDelta.vcxproj  unifytest_TimeDelta.cpp
unify/: Angle.cpp  Angle.h  Angle.inl  Any.h  AssetPaths.cpp  AssetPaths.h  BBox.h  BBox.inl  BRectangle.h  BRectangle.inl  BSphere.h  BSphere.inl  BSquare.h  BSquare.inl  BadCast.h  Cast.cpp  Cast.h  Cast.inl  Color.cpp  Color.h  Color.inl  ColorUnit.cpp  ColorUnit.h  ColorUnit.inl  Colors.h  DataLock.cpp  DataLock.h  DefaultHandler.h  Dynamic.h  Dynamic.inl  Exception.h  FStream.cpp  FStream.h  FStream.inl  FastMap.h  FastMap.inl  Flags.h  Frame.cpp  Frame.h  Frame.inl  (+98 more)
unify/test/: DefaultAssertHandler.cpp  DefaultAssertHandler.h  DefaultEventHandlers.cpp  DefaultEventHandlers.h  DefaultOutputHandlers.cpp  DefaultOutputHandlers.h  IAssertHandler.h  (+4 more)
(+145 files in other folders)
